# marimo-nix-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  skills-lock.json
pages/: dashboard.py  index.py  merger.py
