[project]
name = "marimo-starter-nix"
version = "0.1.0"
description = "This is a multipage starter for a marimo app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "marimo>=0.23.11",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.42.0",
]
